--- a/packs/java/charts/values.yaml
+++ b/packs/java/charts/values.yaml
@@ -11,7 +11,7 @@ service:
   internalPort: 8080
   annotations:
     fabric8.io/expose: "true"
-  probePath: /
+  probePath: /health
 resources:
   limits:
     cpu: 1000m
