--- a/packs/java/charts/values.yaml
+++ b/packs/java/charts/values.yaml
@@ -1,8 +1,10 @@
 # Default values for Maven projects.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 2
+replicaCount: 1
 image:
+  repository: draft
+  tag: dev
   pullPolicy: IfNotPresent
 service:
   name: java
@@ -11,11 +13,21 @@ service:
   internalPort: 8080
   annotations:
     fabric8.io/expose: "true"
-  probePath: /health
 resources:
   limits:
-    cpu: 1000m
-    memory: 200Mi
+    cpu: 500m
+    memory: 512Mi
   requests:
-    cpu: 1000m
-    memory: 200Mi
+    cpu: 400m
+    memory: 512Mi
+probePath: /health
+livenessProbe:
+  initialDelaySeconds: 60
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+readinessProbe:
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+terminationGracePeriodSeconds: 10
