--- a/packs/java/charts/Makefile
+++ b/packs/java/charts/Makefile
@@ -1,6 +1,6 @@
 CHART_REPO := http://jenkins-x-chartmuseum:8080
 CURRENT=$(pwd)
-NAME := 
+NAME := REPLACE_ME
 OS := $(shell uname)
 RELEASE_VERSION := $(shell cat ../../VERSION)
 
