--- a/packs/java/charts/values.yaml
+++ b/packs/java/charts/values.yaml
@@ -7,7 +7,7 @@ image:
   tag: dev
   pullPolicy: IfNotPresent
 service:
-  name: java
+  name: REPLACE_ME
   type: ClusterIP
   externalPort: 80
   internalPort: 8080
