--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -53,11 +53,11 @@
 
 [[constraint]]
   name = "k8s.io/helm"
-  version = "~v2.7.0"
+  revision = "b5af54d44ce282ce5110c0bd0ecacb741d0d8099"
 
 [[override]]
   name = "k8s.io/kubernetes"
-  version = "=v1.8.0"
+  version = "=v1.9.3"
 
 [[override]]
   name = "github.com/imdario/mergo"
