--- a/packs/java/charts/values.yaml
+++ b/packs/java/charts/values.yaml
@@ -20,7 +20,7 @@ resources:
   requests:
     cpu: 400m
     memory: 512Mi
-probePath: /health
+probePath: /actuator/health
 livenessProbe:
   initialDelaySeconds: 60
   periodSeconds: 10
